@@ -1,3 +1,10 @@
+django_codenerix_email (4.0.38) stable; urgency=medium
+
+  * Added filtering support for IMAP receiving emails
+
+ -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 08 Oct 2025 07:00:00 +0200
+
+
 django_codenerix_email (4.0.37) stable; urgency=medium
 
   * Content Subtype removed from send()
